--- a/css/index.css
+++ b/css/index.css
@@ -134,3 +134,46 @@ button:hover{
 .artist img{
     width:100%;
 }
+
+@media(max-width: 500px){
+
+    body{
+        margin-bottom: 15%;
+    }
+    h1{
+        font-size: 5rem;
+        font-weight: bold;
+        line-height: 1.2;
+        margin: 2%;
+    }
+    nav a{
+        font-size: 2rem;
+        padding: 0px 10px 0px 10px;
+    }
+    .title-container div{
+        width: 100%;
+        height: 30vh;
+        flex-shrink: 1;
+        background-size: 260%;
+    }
+    .artists-container{
+        flex-direction: column;
+    }
+    .artist{
+        margin-left: auto;
+        margin-right: auto;
+        width: 80%;
+        font-size: 1.1rem;
+    }
+    .artist img{
+        height: 15vh;
+        width: 80%;
+        margin-bottom: 10px;
+    }
+    .artist a{
+        font-size: 1.8rem;
+    }
+    .artist bio{
+        margin: 0px;
+    }
+}
